[package]
name = "rust_study"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"

tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"

# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

tokio = {version = "1.42.0", features = ["full"]}

lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = { version = "1", features = ["v4", "fast-rng"]}

[dev-dependencies]
httpc-test  = "0.1.1"
anyhow = "1.0.94"
